<resources>
    <string name="app_name">GP2021</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="text_logo">Android Tutorials Hub</string>
    <string name="text_hint_email">Email</string>
    <string name="text_hint_password">Password</string>
    <string name="text_login">Login</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="discover">Discover</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_send">Send</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_signin_message">Hello, sign in to your account</string>
    <string name="text_signin_social_media">Or Sign in using social media</string>
    <string name="text_signup_social_media">Or Sign up using social media</string>
    <string name="text_signin_signup">Don\'t have an account? <b>Sign up</b></string>
    <string name="text_signup_terms">By signing up, you agree to our <b>terms and conditions</b></string>
    <string name="text_signup_message">Hello, let\'s set up your account</string>

    <string name="text_forgot_password_title">Forgot password? No worries</string>
    <string name="text_forgot_password_message">We will send you a link to reset your password</string>

    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="facebook_app_id">323569899033088</string>
    <string name="fb_login_protocol_scheme">fb323569899033088</string>
    <string name="title_activity_custom_camara">CustomCamaraActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>


</resources>