<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".ui.login.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbarThumbHorizontal="@null"
        android:scrollbarThumbVertical="@null">

        <LinearLayout
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.facebook.shimmer.ShimmerFrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:shimmer_shape="radial"
                app:shimmer_auto_start="true"
                app:shimmer_duration="2000"
                app:shimmer_repeat_mode="reverse"
                android:id="@+id/shimmer_view_container"

                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="32dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/app_logo_2" />


            </com.facebook.shimmer.ShimmerFrameLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:text="@string/text_signin_message"
                android:textColor="@color/md_black_1000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_person"
                        android:drawableLeft="@drawable/ic_person"
                        android:drawablePadding="12dp"
                        android:hint="@string/hint_username"
                        android:imeOptions="actionNext"
                        android:textColor="@color/colorRed_900"
                        android:minWidth="320dp"
                        android:minHeight="50dp"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/colorRed_900"

                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawableLeft="@drawable/ic_lock"
                        android:drawablePadding="12dp"
                        android:hint="@string/hint_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:minWidth="320dp"
                        android:minHeight="50dp" />
                    <ProgressBar
                        android:id="@+id/loading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="64dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="64dp"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/password"
                        app:layout_constraintStart_toStartOf="@+id/password"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.3" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <Button
                style="@style/TextyButton"
                android:id="@+id/button_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:padding="10dp"
                android:layout_marginRight="24dp"
                android:textColor="@color/md_black_1000"

                android:text="@string/text_forgot_password" />

            <com.royrodriguez.transitionbutton.TransitionButton
                android:id="@+id/loginbtn"
                style="@style/Button1"
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/button1_bg"

                android:text="Sign in"
                app:defaultColor="#00B6FF"
                app:loaderColor="#00FFBD"
                android:textColor="#FFFFFF" />
                app:cpb_cornerRadius="48dp" />

            <LinearLayout
                android:id="@+id/social_layout"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/text_signin_social_media"
                    android:textColor="@color/md_black_1000"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_margin="8dp"
                        android:id="@+id/sign_in_buttonGoogle"
                        app:srcCompat="@drawable/googf"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />

                    <ImageView
                        android:layout_margin="8dp"
                        app:srcCompat="@drawable/ic_facebook"
                        android:layout_width="40dp"
                        android:id="@+id/signinFacebook"
                        android:layout_height="40dp" />
<!--
                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/signinFacebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp" /> -->

                </LinearLayout>

            </LinearLayout>

            <Button
                style="@style/TextyButton"
                android:id="@+id/button_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="20dp"
                android:textColor="@color/md_black_1000"

                android:text="@string/text_signin_signup" />
        </LinearLayout>

    </RelativeLayout>


</ScrollView>